--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,9 @@
     </head>
     <body>
 
-        <p><%= answer %></p>
+        <div id="root">Loading...</div>
+
+        <script src="/bundle.js" charset="utf-8"></script>
 
     </body>
 </html>
