--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script type="text/javascript">
+            window.initialData = <%- JSON.stringify(initialData) -%>
+        </script>
     </head>
     <body>
 
-        <div id="root"><%- initialContent -%></div>
+        <div id="root"><%- initialMarkup -%></div>
 
         <script src="/bundle.js" charset="utf-8"></script>
 
